<?xml version="1.0"?>
<package format="2">
  <name>mbot_navigation</name>
  <version>1.2.5</version>
  <description>
    The mbot_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="francisZ@stuff.unimelb.com">Francis Zhang</author>
  <author>Leon Jung</author>
  <maintainer email="francisZ@stuff.unimelb.com">Francis Zhang</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>

</package>
